finish project description in README.md